fix #5629 #5108 #9568 - Make Unix web browsers configurable via `browser.unix` property
Default is `["xdg-open", "#DESKTOP#", "$BROWSER", "gnome-open", "kfmclient openURL", "firefox"]`.

git-svn-id: http://josm.openstreetmap.de/svn/trunk@6682 0c6e7542-c601-0410-84e7-c038aed88b3b